Opened 10 years ago

Closed 9 years ago

Last modified 9 years ago

#5153 closed defect (fixed)

problem with 4bpp rle bmp

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: bmp
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

decodes correctly with imagemagick and irfanview

see also ticket #4651

C:\>ffmpeg -i 4bpp_rle.bmp
ffmpeg version N-77782-g42c54d4 Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 5.2.0 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libdcadec --enable-libfreetype --enable-libgme --enable-libgsm --enable-l
ibilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enab
le-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --en
able-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --ena
ble-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc
 --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enabl
e-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-libzimg --
enable-lzma --enable-decklink --enable-zlib
  libavutil      55. 13.100 / 55. 13.100
  libavcodec     57. 22.100 / 57. 22.100
  libavformat    57. 21.101 / 57. 21.101
  libavdevice    57.  0.100 / 57.  0.100
  libavfilter     6. 23.100 /  6. 23.100
  libswscale      4.  0.100 /  4.  0.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
[bmp @ 00000000004ebd80] Unused stream byte 4A is not implemented. Update your F
Fmpeg version to the newest one from Git. If the problem still occurs, it means
that your file has a feature which has not been implemented.
[bmp @ 00000000004ebd80] If you want to help, upload a sample of this file to ft
p://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmp
eg-devel@ffmpeg.org)
[bmp @ 00000000004ebd80] Unused stream byte 0 is not implemented. Update your FF
mpeg version to the newest one from Git. If the problem still occurs, it means t
hat your file has a feature which has not been implemented.
[bmp @ 00000000004ebd80] If you want to help, upload a sample of this file to ft
p://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmp
eg-devel@ffmpeg.org)


[bmp @ 00000000004ebd80] Unused stream byte 0 is not implemented. Update your FF
mpeg version to the newest one from Git. If the problem still occurs, it means t
hat your file has a feature which has not been implemented.
[bmp @ 00000000004ebd80] If you want to help, upload a sample of this file to ft
p://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmp
eg-devel@ffmpeg.org)
Input #0, bmp_pipe, from '4bpp_rle.bmp':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: bmp, pal8, 640x602, 25 tbr, 25 tbn, 25 tbc
At least one output file must be specified

Attachments (3)

4bpp_rle.bmp (29.5 KB ) - added by ami_stuff 10 years ago.
4bpp_rle_no_flip_row_order.bmp (29.5 KB ) - added by ami_stuff 10 years ago.
4bpp_rle_flip_row_order.bmp (29.5 KB ) - added by ami_stuff 10 years ago.

Download all attachments as: .zip

Change History (6)

by ami_stuff, 10 years ago

Attachment: 4bpp_rle.bmp added

comment:1 by ami_stuff, 10 years ago

I don't know if it's a bug in photoshop or ffmpeg.

by ami_stuff, 10 years ago

by ami_stuff, 10 years ago

Attachment: 4bpp_rle_flip_row_order.bmp added

comment:2 by Elon Musk, 9 years ago

Resolution: fixed
Status: newclosed

comment:3 by Carl Eugen Hoyos, 9 years ago

Component: undeterminedavcodec
Keywords: bmp added
Version: unspecifiedgit-master
Note: See TracTickets for help on using tickets.